--- a/Utilities/RsaTool/Makefile
+++ b/Utilities/RsaTool/Makefile
@@ -1,6 +1,6 @@
 CC ?= gcc
 CFLAGS=-Wall -Wextra -pedantic -O3 -I/usr/local/opt/openssl/include -I/opt/local/include
-LDFLAGS=-L/usr/local/opt/openssl/lib -lcrypto
+LDFLAGS=-L/usr/local/opt/openssl/lib -L/opt/local/lib -lcrypto
 
 all: RsaTool
 
